# web-app

./: .clang-format  .clang-tidy  .editorconfig  .env.vault  .gitattributes  .gitignore  .gitkeep  .linthtmlrc  .markdown.json  .markdownlint.json  .prettierrc  .shellcheckrc  ABOUT-NLS  ACKNOWLEDGEMENT.html  ACKNOWLEDGEMENT.md  AUTHORS  AUTHORS.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.html  CONTRIBUTING.md  COPYING  COPYING.html  ChangeLog  ChangeLog.html  Containerfile  INSTALL  INSTALL.html  Makefile  Makefile.am  Makefile.in  NEWS  README.html  README.md  SUPPORT.html  SUPPORT.md  TODO.html  TODO.md  bearssl.txt  clib.json  (+30 more)
.devcontainer/: Containerfile  git.md  issue.md
.github/: CODEOWNERS  CODEOWNERS.html  FUNDING.yml  ISSUE_TEMPLATE.html  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.html  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  webserver-1.0.0.tar.xz
.github/workflows/: CI-CD-Pipeline.yml  build.yml  move-cards.yml
checksums/: libs.sha256
config/: .env.vault  Makefile  config.conf  config.ini  deps.txt  gcc.spec  sources.txt  test_sources.txt
config/env/: .env
config/mkconfig/: config.h.in
docs/: CONTACT.html  CONTACT.md  FAQ.html  FAQ.md  INSTALL.html  INSTALL.md  Makefile  Makefile.am
docs/api/: API.md
docs/dev/: CONTRIBUTING.md  CSS_STANDARDS.md  DEBUG.md  DEVELOPER_GUIDE.md  EXAMPLES.md  HACKING.md  HTML_STANDARDS.md  INSTALL.md  JS_STANDARDS.md  RELEASE.md  TESTING.md  TOOLCHAIN.md
docs/project/: AUTHORS.md  MAINTAINERS  NEWS  ROADMAP.md  TODO.md
docs/security/: CODE_OF_CONDUCT.md  SECURITY.md
docs/technical/: DOCUMENTATION.md  project-index.md  project-structure.txt  specfile.spec
docs/user/: FAQ.md  SUPPORT.md  USER_GUIDE.md
etc/: .autoindent  Makefile  Makefile.am  config.conf  config.ini  gcc.spec  header_sources.txt  process_files.gawk  scan_list.txt  sources.txt  test_sources.txt
etc/server/: auth.passwd
include/: Makefile  Makefile.am  app.h  audit.h  audit_events.h  auth.h  bearssl_wrapper.h  cache.h  common.h  config.h  config_loader.h  constant.h  constants.h  data_structures.h  database.h  env_loader.h  error_codes.h  error_handler.h  file_io.h  garbage_collector.h  gettext.h  hello.h  hosts.h  http.h  http_parser.h  http_response.h  init.h  logger.h  logging.h  mem.h  mime.h  process.h  profile.h  quic.h  request_processing.h  request_validation.h  scheduler.h  server.h  socket.h  ssl.h  (+10 more)
include/authentication/: auth_policy_enforcer.h  auth_token_validator.h  user_authenticator.h
include/core/: server_core.h
include/http/: http_record_handler.h  http_request_handler.h  http_user_handler.h
include/io/: file_reader.h  file_writer.h  socket_handler.h
include/logging/: error_log_write.h  log_reader.h  log_rotator.h  log_writer.h
include/recutils/: rec_file_reader.h  rec_file_writer.h  rec_obligation_generator.h  rec_record_parser.h
include/util/: checksum_utils.h  data_utils.h
include/validation/: input_validator.h
lib/: Makefile.am  unity.h
logs/: Makefile.am
m4/: Makefile.am
objects/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile.am  Makefile.in.in.backup  POTFILES.in  en_AU.po  fix_Makefile.sh
public/views/: index.html
scripts/config/: common-config.sh  config_loader.sh  config_manager.sh  mkconfig.sh  mkdirs.sh  shared-config.sh
scripts/install/: install-deps.sh  install-tools.sh  install.sh  post-install.sh
scripts/middleware/: handle_error.sh  init.sh  process_request.sh  process_response.sh  validate_input.sh
scripts/monitoring/: system_monitor.sh
scripts/security/: security_validator.sh
scripts/session/: session_manager.sh
scripts/utils/: check-debug.sh  check-style.sh  checksum-utils.sh  compile-flags.sh  log_rotate.sh  logger.sh  run-tests.sh  shared-utils.sh  sync-test.sh  validate-html.sh  validate-man.sh  verify-checksum.sh
scripts/validate/: validate-css.sh  validate-html.sh  validate-js.sh
src/: Makefile  Makefile.am  Makefile.in  audit.c  audit_events.c  auth.c  authenticate.c  bearssl_wrapper.c  cache.c  common.c  config.c  config_loader.c  constant.c  constants.c  data_structures.c  database.c  env.c  env_loader.c  error_handler.c  file_io.c  fs.c  garbage_collector.c  hash_password.c  hello.c  hosts.c  http.c  http_parser.c  http_response.c  init.c  lexer.l  logger.c  logging.c  main.c  mem.c  mime.c  parser.y  profile.c  quic.c  quic_module.c  records.c  (+15 more)
src/authentication/: user_authenticator.c
src/core/: server_core.c
src/http/: http_record_handler.c  http_request_handler.c  http_user_handler.c
src/io/: file_reader.c  file_writer.c  socket_handler.c
src/logging/: log_rotator.c  log_writer.c
src/recutils/: rec_file_writer.c  rec_obligation_generator.c  rec_record_parser.c
src/util/: checksum_utils.c  data_utils.c
src/validation/: input_validator.c
static/: dashboard.html  login.html  update_profile.html
test/: integration_tests.c  invalid_test_auth.passwd  main_test.c  mock_socket.c  mock_socket.h  performance_tests.c  security_tests.c  test_auth.passwd  test_cache.c  test_constant.c  test_constants.c  test_cosistency.c  test_defs.h  test_fs.c  test_helpers.c  test_helpers.h  test_http.c  test_index.html  test_init.c  test_main.c  test_main_module.c  test_mem.c  test_runner.c  test_scheduler.c  test_server.c  test_struct.c  test_suite.h  test_suites.h  test_utils.h  test_web_server.c  test_web_server_security.c  unit_tests.c
test/fixtures/: test_data.txt
test/include/: test_helpers.h
test/integration/: api_test.c  checksum_verification_test.c
test/mocks/: http_request_mock.c  util_stub.c
test/performance/: load_test.c  stress_test.c
test/security/: penetration_test.c  sql_injection_test.c  xss_test.c
test/unit/: auth_test.c  data_validator_test.c  log_handler_test.c  main_test.c  request_handler_test.c
tests/: Makefile.am  test_config_loader.c  test_env_loader.c  test_error_handler.c  test_garbage_collector.c  test_hello.c  test_logger.c  test_main.c  test_validator.c
tmp/: Makefile.am
var/records/: obligation_number.txt  scjv.rec
www/: crud_scjv.html  index.html
xml/: gtkdocentities.ent
(+116 files in other folders)
