.POSIX:

ACLOCAL_AMFLAGS = -I m4

AM_CFLAGS = $(CFLAGS)
AM_LDFLAGS = $(LDFLAGS)

SUBDIRS = bin build deps dist docs etc include lib logs m4 objects src tests tmp

DISTCLEANFILES = Makefile.in aclocal.m4 configure config.h.in

EXTRA_DIST = ABOUT-NLS AUTHORS COPYING ChangeLog INSTALL LICENSE NEWS README.md
