# Copyright 2024 Enveng Group - Simon French-Bluhm and Adrian Gallo.
# SPDX-License-Identifier: 	AGPL-3.0-or-later

# etc/Makefile.am

# Include the .env file if it exists
-include .env
export $(shell cat .env | grep -v '#' | awk '/=/ {print $$1}')

# Define the configuration files for the etc directory
configdir = $(sysconfdir)
dist_config_DATA = config.conf config.ini gcc.spec header_sources.txt sources.txt
