# Copyright 2024 Enveng Group - Simon French-Bluhm and Adrian Gallo.
# SPDX-License-Identifier: 	AGPL-3.0-or-later

# m4/Makefile.am

.POSIX: # Enforce POSIX mode for portability

# Include common rules
include ../common-rules.am

# Add generate_tags to the build process
all: generate_tags

# Add clean_tags to the clean process
clean: clean_tags

# Define the directory for m4 macros
ACLOCAL_AMFLAGS = -I m4
